devops/kubernetes/deployment-solution.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: "ghcr.io/aicollaboration/frontend:<VERSION>"
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "2048Mi"
              cpu: "500m"
      restartPolicy: Always
