devops/kubernetes/api-ingress-solution.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aicollaboration.com
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - aicollaboration.com
      secretName: tls-latest-aiproduct.io
  rules:
    - host: aicollaboration.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
